fix bg img on small screens

--- a/frontend/src/styles/Landing.scss
+++ b/frontend/src/styles/Landing.scss
@@ -54,8 +54,10 @@
 }
 
 .form-img {
-  z-index: -1;
+  z-index: 0;
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   opacity: 0.8;
@@ -75,7 +77,7 @@
   @include text-shadow;
 }
 
-// on small screens
+// ON BIG SCREENS
 @media screen and (min-width: 770px) {
   .main-container {
     display: flex;
